# trial

./: .gitignore  main.py  pyproject.toml  test.ipynb  test.py
